--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@pixi/filter-kawase-blur": "^3.2.0",
+    "debounce": "^1.2.0",
+    "hsl-to-hex": "^1.0.0",
     "next": "10.0.5",
+    "pixi.js": "^5.3.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "simplex-noise": "^2.4.0"
   }
 }
