--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.1.5",
     "@pixi/filter-kawase-blur": "^3.2.0",
     "debounce": "^1.2.0",
     "hsl-to-hex": "^1.0.0",
@@ -16,5 +18,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "simplex-noise": "^2.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "typescript": "^4.2.2"
   }
 }
