--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@pixi/filter-kawase-blur": "^3.2.0",
     "debounce": "^1.2.0",
