--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "lint": "eslint ./src/pages/* ./src/components/* ./src/api/*  -c .eslintrc.json --fix --ext ts,tsx",
     "start": "next start"
   },
   "dependencies": {
@@ -23,6 +24,18 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-mdx": "^1.9.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
+    "stylelint-config-recommended": "^4.0.0",
     "typescript": "^4.2.2"
   }
 }
