--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
+  "name": "brian-personal-site",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "lint": "eslint ./src/pages/* ./src/components/* ./src/api/*  -c .eslintrc.json --fix --ext ts,tsx",
-    "start": "next start"
+    "dev": "next dev",
+    "start": "next start",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "typescript": "^4.2.2"
   }
 }
